@@ -29,6 +29,7 @@
 GtkWidget* dbgbkpts_create_window(void);
 GtkWidget* dbgbkpts_display_window(void);
 void dbgbkpts_refresh_window(void);
+void dbgbkpts_erase_context(void);
 
 typedef struct 
 {
