@@ -36,7 +36,7 @@
 */
 
 #ifdef __WIN32__
-# define TIEMU_VERSION "3.02"		// For Win32
+# define TIEMU_VERSION "3.03"		// For Win32
 #else
 # define TIEMU_VERSION VERSION
 #endif
